# watercolor_simulator_GPU

./: README.md  benchmark.hpp
simulator/: CMakeLists.txt  README.md
simulator/src/: main.cu
